# pdf-reader

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: arquitetura.md  especificacao-campos.md  plano-desenvolvimento.md  requisitos.md  visao-produto.md
packaging/windows/: pdf-reader.spec
resources/tessdata/: README.md
scripts/: build_windows.ps1
src/app/: bootstrap.py  main.py  runtime_paths.py  user_settings.py  version.py
src/application/: aggregation_service.py  extraction_service.py  progress.py
src/domain/: models.py  normalizers.py  validators.py
src/infrastructure/: __init__.py
src/infrastructure/aggregation/: __init__.py  city_item_aggregator.py
src/infrastructure/export/: __init__.py  excel_exporter.py
src/infrastructure/logging/: logger.py
src/infrastructure/ocr/: __init__.py  image_preprocessor.py  ocr_engine.py
src/infrastructure/parser/: __init__.py  city_parser.py  invoice_layout_parser.py  item_line_parser.py
src/infrastructure/pdf/: __init__.py  metadata_reader.py  renderer.py
src/infrastructure/version/: github_version_checker.py
src/ui/: __init__.py  about_dialog.py  dialogs.py  main_window.py  theme.py  view_state.py  workers.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: sample_expectations.py  test_sample_pipeline.py
tests/unit/: test_aggregation.py  test_excel_exporter.py  test_extraction_service.py  test_normalizers.py  test_ocr_engine.py  test_parser.py  test_runtime_paths.py  test_user_settings.py  test_versioning.py  test_view_state.py
