[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-reader"
version = "0.1.0"
description = "Desktop app to extract invoice data from PDF files and export grouped Excel reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<7.0",
    "PyMuPDF>=1.26,<2.0",
    "pytesseract>=0.3.13,<0.4",
    "pypdf>=5.0,<6.0",
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-qt>=4.4,<5.0",
]

[project.scripts]
pdf-reader = "app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
